added MAVEN_OPTS environment variable to setup.sh to allocate more java heap space